--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
 
         location / {
             # Passes initial requests to port 8080 to `hello` container at port 8888
-            proxy_pass   http://testtest-backet.appspot.com/index.html;
+            proxy_pass   https://testtest-backet.appspot.com/index.html;
 
         }
     }
