--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
         # Listen at port 8080
         listen 8080;
         # Server at localhost
-        server_name _;
+        server_name www.properly.jp;
         # Enables gzip compression to make our app faster
         gzip on;
 
