--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,13 @@ http {
         # Listen at port 8080
         listen 8080;
         # Server at localhost
-        server_name www.properly.jp;
+        server_name _;
         # Enables gzip compression to make our app faster
         gzip on;
 
         location / {
             # Passes initial requests to port 8080 to `hello` container at port 8888
-            proxy_pass   https://storage.cloud.google.com/testtest-backet/index.html;
+            proxy_pass   https://storage.googleapis.com/testtest-backet/index.html;
 
         }
     }
